compiler/tests/compiler/must_fail/t_03.mil
extern fn test() {
  x : stack u64;
  x = 0;
  y : stack u64;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
